Use Integer.valueOf() instead of deprecated constructor